added delete tasks function, filtered from popup settings

--- a/index.html
+++ b/index.html
@@ -315,20 +315,38 @@
                                         class="settings__checkbox-custom"
                                         name="checkbox-1"
                                         type="checkbox"
-                                        checked
+                                        data-clear-items="all"
                                     />
                                     <label for="checkbox-1" class="settings__checkbox-custom-label">Все</label>
                                 </div>
                                 <div class="settings__clear-checkbox-item">
-                                    <input id="checkbox-2" class="settings__checkbox-custom" name="checkbox-2" type="checkbox" />
+                                    <input
+                                        id="checkbox-2"
+                                        class="settings__checkbox-custom"
+                                        name="checkbox-2"
+                                        type="checkbox"
+                                        data-clear-items="in progress"
+                                    />
                                     <label for="checkbox-2" class="settings__checkbox-custom-label">Активные</label>
                                 </div>
                                 <div class="settings__clear-checkbox-item">
-                                    <input id="checkbox-3" class="settings__checkbox-custom" name="checkbox-3" type="checkbox" />
+                                    <input
+                                        id="checkbox-3"
+                                        class="settings__checkbox-custom"
+                                        name="checkbox-3"
+                                        type="checkbox"
+                                        data-clear-items="done"
+                                    />
                                     <label for="checkbox-3" class="settings__checkbox-custom-label">Выполненные</label>
                                 </div>
                                 <div class="settings__clear-checkbox-item">
-                                    <input id="checkbox-4" class="settings__checkbox-custom" name="checkbox-4" type="checkbox" />
+                                    <input
+                                        id="checkbox-4"
+                                        class="settings__checkbox-custom"
+                                        name="checkbox-4"
+                                        type="checkbox"
+                                        data-clear-items="deleted"
+                                    />
                                     <label for="checkbox-4" class="settings__checkbox-custom-label">Удаленные</label>
                                 </div>
                             </div>
