--- a/index.html
+++ b/index.html
@@ -577,6 +577,7 @@
         <script>
             config = {
                 dateFormat: "d-m",
+                disableMobile: "true",
             };
             flatpickr("#datepicker", config);
         </script>
